--- a/src/app/modals/baseball-chatroom/baseball-chatroom.page.html
+++ b/src/app/modals/baseball-chatroom/baseball-chatroom.page.html
@@ -1,45 +1,23 @@
 <ion-header>
   <ion-toolbar>
-    <div class="top">
-
+    <div class="top-pre-post-game" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'Final' || baseballData.gameInfo.initialGameData.status.detailedState === 'Game Over' || baseballData.gameInfo.gameStarted === 'false'">
       <div class="scoreboard" slot="start">
         <div class="away-info">
           <ion-avatar>
-            <img class="scoreboard-logo-away" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.basicGameInfo[0].initialGameData.teams.away.id}}/spots/120" />
+            <img class="scoreboard-logo-away" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.gameInfo.initialGameData.teams.away.id}}/spots/120" />
           </ion-avatar>
-          <ion-note class="score" color="dark">{{baseballData.basicGameInfo[0].currentPlay.result.awayScore}}</ion-note>
+          <ion-note class="score" color="dark">{{baseballData.gameInfo.currentPlay.result.awayScore}}</ion-note>
         </div>
-  
-        <div *ngIf="baseballData.gameStatus === 'Final' || baseballData.gameStarted === 'false'" class="bases-outs">
-            <ion-note *ngIf="baseballData.gameStatus === 'Final'" class="final" color="dark">{{baseballData.startTime | date: 'E M/d' }} <br> Final</ion-note>
-            <ion-note *ngIf="baseballData.gameStarted === 'false'" class="final" color="dark">{{baseballData.startTime | date: 'E M/d' }} <br> {{baseballData.startTime | date: 'h:mm a'}} ET</ion-note>
+
+        <div class="date-status" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'Final' || baseballData.gameInfo.initialGameData.status.detailedState === 'Game Over' || baseballData.gameInfo.gameStarted === 'false'">
+          <ion-note *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'Final' || baseballData.gameInfo.initialGameData.status.detailedState === 'Game Over'" class="final" color="dark">{{baseballData.startTime | date: 'E M/d' }} <br> Final</ion-note>
+          <ion-note *ngIf="baseballData.gameInfo.gameStarted === 'false'" class="final" color="dark">{{baseballData.startTime | date: 'E M/d' }} <br> {{baseballData.startTime | date: 'h:mm a'}} ET</ion-note>
         </div>
-  
-        <div *ngIf="baseballData.gameStatus === 'In Progress'" class="bases-outs-inprogress">
-          <ion-note class="half-inning" *ngIf="baseballData.gameStatus === 'In Progress'">{{baseballData.currentHalfInning}}</ion-note>
-          <ion-avatar *ngIf="baseballData.gameStatus === 'In Progress'">
-            <img *ngIf="!baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/bases-clear.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && (!baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird)" src="../../../assets/baseball-data/runner-on-first-only.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && (!baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird)" src="../../../assets/baseball-data/runner-second-only.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird && (!baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond)" src="../../../assets/baseball-data/runner-third-only.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/runners-first-second.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst" src="../../../assets/baseball-data/runners-second-third.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond && baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/bases-loaded.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.matchup.postOnFirst && baseballData.basicGameInfo[0].currentPlay.matchup.postOnThird && !baseballData.basicGameInfo[0].currentPlay.matchup.postOnSecond" src="../../../assets/baseball-data/runners-corners.svg" />
-          </ion-avatar>
-          <ion-note *ngIf="baseballData.gameStatus === 'In Progress'" class="current-count">{{baseballData.basicGameInfo[0].currentPlay.count.balls}} - {{baseballData.basicGameInfo[0].currentPlay.count.strikes}}</ion-note>
-          <ion-avatar class="number-of-outs" *ngIf="baseballData.gameStatus === 'In Progress'">
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.count.outs === 0" src="../../../assets/baseball-data/no-outs.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.count.outs === 1" src="../../../assets/baseball-data/one-out.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.count.outs === 2" src="../../../assets/baseball-data/two-outs.svg" />
-            <img *ngIf="baseballData.basicGameInfo[0].currentPlay.count.outs === 3" src="../../../assets/baseball-data/three-outs.svg" />
-          </ion-avatar>
-        </div>
-  
+
         <div class="home-info">
-          <ion-note class="score" color="dark">{{baseballData.basicGameInfo[0].currentPlay.result.homeScore}}</ion-note>
+          <ion-note class="score" color="dark">{{baseballData.gameInfo.currentPlay.result.homeScore}}</ion-note>
           <ion-avatar>
-            <img class="scoreboard-logo-home" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.basicGameInfo[0].initialGameData.teams.home.id}}/spots/120" />
+            <img class="scoreboard-logo-home" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.gameInfo.initialGameData.teams.home.id}}/spots/120" />
           </ion-avatar>
         </div>
       </div>
@@ -47,35 +25,97 @@
         <ion-icon slot="end" (click)="backToHub()" name="close-outline"></ion-icon>
       </div>
     </div>
-      <ion-icon *ngIf="baseballData.gameStatus === 'In Progress' && !accordionOpen" class="see-more" name="chevron-down" (click)="openAccordion()"></ion-icon>
-      <ion-icon *ngIf="baseballData.gameStatus === 'In Progress' && accordionOpen" class="see-more" name="chevron-up" (click)="openAccordion()"></ion-icon>
-      <ion-accordion value="at-bat" id="accordion" *ngIf="baseballData.gameStatus === 'In Progress'">
+
+    <div class="top-live-game" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState !== 'Final' || baseballData.gameInfo.initialGameData.status.detailedState !== 'Game Over' && baseballData.gameInfo.gameStarted === 'true'">
+      <div class="scoreboard">
+        <div class="away-info">
+          <ion-avatar>
+            <img class="scoreboard-logo-away" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.gameInfo.initialGameData.teams.away.id}}/spots/120" />
+          </ion-avatar>
+          <ion-note class="score" color="dark">{{baseballData.gameInfo.currentPlay.result.awayScore}}</ion-note>
+        </div>
+  
+        <div *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'" class="bases-outs-inprogress">
+          <ion-note class="half-inning" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">{{baseballData.gameInfo.currentHalfInning}}</ion-note>
+          <ion-avatar *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">
+            <img *ngIf="!baseballData.gameInfo.currentPlay.matchup.postOnFirst && !baseballData.gameInfo.currentPlay.matchup.postOnSecond && !baseballData.gameInfo.currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/bases-clear.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnFirst && (!baseballData.gameInfo.currentPlay.matchup.postOnSecond && !baseballData.gameInfo.currentPlay.matchup.postOnThird)" src="../../../assets/baseball-data/runner-on-first-only.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnSecond && (!baseballData.gameInfo.currentPlay.matchup.postOnFirst && !baseballData.gameInfo.currentPlay.matchup.postOnThird)" src="../../../assets/baseball-data/runner-second-only.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnThird && (!baseballData.gameInfo.currentPlay.matchup.postOnFirst && !baseballData.gameInfo.currentPlay.matchup.postOnSecond)" src="../../../assets/baseball-data/runner-third-only.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnFirst && baseballData.gameInfo.currentPlay.matchup.postOnSecond && !baseballData.gameInfo.currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/runners-first-second.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnSecond && baseballData.gameInfo.currentPlay.matchup.postOnThird && !baseballData.gameInfo.currentPlay.matchup.postOnFirst" src="../../../assets/baseball-data/runners-second-third.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnFirst && baseballData.gameInfo.currentPlay.matchup.postOnSecond && baseballData.gameInfo.currentPlay.matchup.postOnThird" src="../../../assets/baseball-data/bases-loaded.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.matchup.postOnFirst && baseballData.gameInfo.currentPlay.matchup.postOnThird && !baseballData.gameInfo.currentPlay.matchup.postOnSecond" src="../../../assets/baseball-data/runners-corners.svg" />
+          </ion-avatar>
+          <ion-note *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'" class="current-count">{{baseballData.gameInfo.currentPlay.count.balls}} - {{baseballData.gameInfo.currentPlay.count.strikes}}</ion-note>
+          <ion-avatar class="number-of-outs" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">
+            <img *ngIf="baseballData.gameInfo.currentPlay.count.outs === 0" src="../../../assets/baseball-data/no-outs.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.count.outs === 1" src="../../../assets/baseball-data/one-out.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.count.outs === 2" src="../../../assets/baseball-data/two-outs.svg" />
+            <img *ngIf="baseballData.gameInfo.currentPlay.count.outs === 3" src="../../../assets/baseball-data/three-outs.svg" />
+          </ion-avatar>
+        </div>
+
+        <div class="home-info">
+          <ion-note class="score" color="dark">{{baseballData.gameInfo.currentPlay.result.homeScore}}</ion-note>
+          <ion-avatar>
+            <img class="scoreboard-logo-home" alt="team-logo-away" src="https://midfield.mlbstatic.com/v1/team/{{baseballData.gameInfo.initialGameData.teams.home.id}}/spots/120" />
+          </ion-avatar>
+        </div>
+
+      </div>
+
+      <div class="duel" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState !== 'Final' || baseballData.gameInfo.initialGameData.status.detailedState !== 'Game Over' && baseballData.gameInfo.gameStarted === 'true'">
+        <div class="current-batter">
+          <ion-card-subtitle>At Bat</ion-card-subtitle>
+          <div class="batter-stats">
+            <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.gameInfo.currentPlay.matchup.batter.id}}/spots/120" /></ion-avatar>
+            <ion-note class="current-batter-stats" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress' && !baseballData.gameInfo.currentBatterSplits.stats">{{baseballData.gameInfo.currentPlay.matchup.batter.fullName}}<br>({{baseballData.gameInfo.currentBatterStats}})</ion-note>
+            <ion-note class="current-batter-stats" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress' && baseballData.gameInfo.currentBatterSplits.stats">{{baseballData.gameInfo.currentPlay.matchup.batter.fullName}}&nbsp;({{baseballData.gameInfo.currentBatterSplits.stats}})</ion-note>
+          </div>
+        </div>
+        <div class="current-pitcher">
+          <ion-card-subtitle>Pitching</ion-card-subtitle>
+          <div class="pitcher-stats">
+            <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.gameInfo.currentPlay.matchup.pitcher.id}}/spots/120" /></ion-avatar>
+            <ion-note class="current-pitcher-stats" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">{{baseballData.gameInfo.currentPlay.matchup.pitcher.fullName}}<br>{{baseballData.gameInfo.currentPitcherStats}}</ion-note>
+          </div>
+        </div>
+      </div>
+
+      <div class="exit">
+        <ion-icon slot="end" (click)="backToHub()" name="close-outline"></ion-icon>
+      </div>
+    </div>
+      <!-- <ion-icon *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress' && !accordionOpen" class="see-more" name="chevron-down" (click)="openAccordion()"></ion-icon>
+      <ion-icon *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress' && accordionOpen" class="see-more" name="chevron-up" (click)="openAccordion()"></ion-icon>
+      <ion-accordion value="at-bat" id="accordion" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">
         <div class="bottom" slot="content">
             <div class="overall-matchup-data">
               <div class="batter">
                 <ion-card-subtitle>At Bat</ion-card-subtitle>
                 <div class="batter-stats">
-                  <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.basicGameInfo[0].currentPlay.matchup.batter.id}}/spots/120" /></ion-avatar>
-                  <ion-note class="current-batter-stats" *ngIf="baseballData.gameStatus === 'In Progress'">{{baseballData.basicGameInfo[0].currentPlay.matchup.batter.fullName}}<br>{{baseballData.currentBatterStats}}</ion-note>
+                  <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.gameInfo.currentPlay.matchup.batter.id}}/spots/120" /></ion-avatar>
+                  <ion-note class="current-batter-stats" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">{{baseballData.gameInfo.currentPlay.matchup.batter.fullName}}<br>{{baseballData.currentBatterStats}}</ion-note>
                 </div>
               </div>
               <div class="pitcher">
                 <ion-card-subtitle>Pitching</ion-card-subtitle>
                 <div class="pitcher-stats">
-                  <ion-note class="current-pitcher-stats" *ngIf="baseballData.gameStatus === 'In Progress'">{{baseballData.basicGameInfo[0].currentPlay.matchup.pitcher.fullName}}<br>{{baseballData.currentPitcherStats}}</ion-note>
-                  <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.basicGameInfo[0].currentPlay.matchup.pitcher.id}}/spots/120" /></ion-avatar>
+                  <ion-note class="current-pitcher-stats" *ngIf="baseballData.gameInfo.initialGameData.status.detailedState === 'In Progress'">{{baseballData.gameInfo.currentPlay.matchup.pitcher.fullName}}<br>{{baseballData.currentPitcherStats}}</ion-note>
+                  <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{baseballData.gameInfo.currentPlay.matchup.pitcher.id}}/spots/120" /></ion-avatar>
                 </div>
               </div>
             </div>
             <div class="plays">
-              <div class= "last-update" *ngFor="let pitch of baseballData.basicGameInfo[0].currentPlay.playEvents">
+              <div class= "last-update" *ngFor="let pitch of baseballData.gameInfo.currentPlay.playEvents">
                 <ion-chip color="success" [outline]="true" *ngIf="pitch.isPitch && pitch.details.call.code === 'B'">{{pitch.pitchNumber}}</ion-chip>&nbsp;<ion-note *ngIf="pitch.isPitch && pitch.details.call.code === 'B'">{{pitch.pitchData.endSpeed}} MPH {{pitch.details.type.description}} -- {{pitch.details.description}}</ion-note>
                 <ion-chip color="danger" [outline]="true" *ngIf="pitch.isPitch && (pitch.details.call.code === 'S' || pitch.details.call.code === 'F' || pitch.details.call.code === 'C')">{{pitch.pitchNumber}}</ion-chip>&nbsp;<ion-note *ngIf="pitch.isPitch && (pitch.details.call.code === 'S' || pitch.details.call.code === 'F' || pitch.details.call.code === 'C')">{{pitch.pitchData.endSpeed}} MPH {{pitch.details.type.description}} -- {{pitch.details.description}}</ion-note>
                 <ion-chip color="primary" [outline]="true" *ngIf="pitch.isPitch && pitch.details.call.code === 'X'">{{pitch.pitchNumber}}</ion-chip>&nbsp;<ion-note *ngIf="pitch.isPitch && pitch.details.call.code === 'X'">{{pitch.pitchData.endSpeed}} MPH {{pitch.details.type.description}} -- {{pitch.details.description}}</ion-note>
               </div>
             </div>
         </div>
-      </ion-accordion>
+      </ion-accordion> -->
   </ion-toolbar>
 </ion-header>
 
@@ -141,7 +181,7 @@
 </ion-content>
 
 <ion-footer lines="none">
-  <form [formGroup]="postChat" (ngSubmit)="createChat(postChat.value)">
+  <!-- <form [formGroup]="postChat" (ngSubmit)="createChat(postChat.value)">
     <ion-item class="chat-box" lines="none">
       <ion-avatar class="chat-user-pic">
         <img id="avatar" src="../../../assets/avatar.svg">
@@ -150,5 +190,5 @@
         <ion-icon (click)="createChat(postChat.value)" *ngIf="userTyped" color="dark" size="large" name="arrow-up-circle"></ion-icon>
       </ion-textarea>
     </ion-item>
-  </form>
+  </form> -->
 </ion-footer>
