--- a/src/app/modals/baseball-chatroom/baseball-chatroom.page.scss
+++ b/src/app/modals/baseball-chatroom/baseball-chatroom.page.scss
@@ -1,25 +1,27 @@
-.top {
+.top-live-game {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
-.see-more {
+.top-pre-post-game {
     display: flex;
-    margin: -0.5em 0.5em 0.5em 0.5em;
-    width: 90%;
-    zoom: 1.5;
-}
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
+    .date-status {
+        text-align: center;
+    }
 
-ion-accordion {
-    background: inherit;
-    
-    div.input-wrapper {
-        display: none !important;
+    .scoreboard {
+        min-width: 90%;
     }
 }
+
 
 
 ion-item {
@@ -31,81 +33,25 @@ ion-item {
     }
 }
 
-.bottom {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: auto;
-
-
-    .overall-matchup-data {
-        display: flex;
-        flex-direction: row;
-    }
-
-
-    ion-card-subtitle {
-        text-align: center;
-    }
-
-    .batter {
-        width: 50%;
-        border-right: 1px solid var(--ion-color-medium);
-        margin: 0.5em 0.5em 0.5em -0.5em;
-
-        ion-avatar {
-            width: 40px;
-            height: 40px;
-        }
-    }
-
-    .pitcher {
-        width: 50%;
-        margin: 0.5em -0.5em 0.5em 0.5em;
-
-        ion-avatar {
-            width: 40px;
-            height: 40px;
-        }
-    }
-
-    .batter-stats, .pitcher-stats {
-        display: flex;
-        flex-direction: row;
-        font-size: 0.75em;
-        
-        .current-batter-stats {
-            margin-left: 1em;
-            text-align: left;
-        }
-
-        .current-pitcher-stats {
-            margin-right: 1em;
-            text-align: right;
-        }
-    }
-}
 .scoreboard {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    min-width: 95%;
     min-height: 80px;
+    width: 50%;
 
     .scoreboard-logo-away, .scoreboard-logo-home {
         margin-top: 0.25em;
-        height: 40px;
-        width: 40px;
+        height: 24px;
+        width: 24px;
+
+        ion-avatar {
+            height: 24px;
+            width: 24px;
+        }
     }
 
-    .scoreboard-logo-away {
-        margin-right: 0.5em;
-    }
-
-    .scoreboard-logo-home {
-        margin-left: 0.5em;
-    }
 
     .bases-outs-inprogress {
         display: flex;
@@ -120,18 +66,18 @@ ion-item {
     }
 
     .half-inning {
-        font-size: 0.9em;
+        font-size: 0.7em;
         font-weight: 600;
     }
 
     .score {
-        font-size: 2em;
+        font-size: 1.5em;
         font-weight: 900;
     }
 
     .current-count {
-        margin-top: -1em;
-        font-size: 0.9em;
+        margin-top: -1.5em;
+        font-size: 0.7em;
         font-weight: 600;
     }
 
@@ -145,19 +91,24 @@ ion-item {
         line-height: 0%;
     }
 
+    ion-avatar {
+        margin-top: -0.25em;
+    }
+
     .away-info, .home-info {
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
+
+        ion-avatar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
-.last-update {
-
-    ion-note {
-        font-size: 0.9em;
-    }
-}
 
 .chat-wrapper {
     // display: flex;
@@ -218,8 +169,8 @@ ion-item {
             }
 
             ion-avatar {
-                max-height: 30px;
-                max-width: 30px;
+                max-height: 24px;
+                max-width: 24px;
             }
         }
     }
@@ -310,4 +261,36 @@ ion-footer {
     height: 120px;
     width: 100%;
     clear: both;
+}
+
+.batter-stats, .pitcher-stats {
+    display: flex;
+    align-items: center;
+    font-size: 0.85em;
+
+    ion-note {
+        font-size: 0.8em;
+        margin-left: 0.25em;
+    }
+
+    ion-avatar {
+        height: 20px;
+        width: 20px;
+    }
+}
+
+.duel {
+    width: 50%;
+    padding-left: 0.75em;
+    border-left: 1px solid var(--ion-toolbar-border-color, var(--ion-border-color, var(--ion-color-step-150, rgba(0, 0, 0, 0.2))));
+
+    .current-batter, .current-pitcher {
+        margin-bottom: 0.5em;
+
+        ion-card-subtitle {
+            font-size: 0.6em;
+            margin-bottom: 0px;
+            margin-top: 0.5em;
+        }
+    }
 }
