--- a/src/app/modals/comment-modal/comment-modal.page.scss
+++ b/src/app/modals/comment-modal/comment-modal.page.scss
@@ -394,3 +394,10 @@ ion-toolbar {
 .comment-input-user-pic {
     margin: 0 0 0 0.5em;
 }
+
+ion-infinite-scroll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2vh;
+}
