--- a/src/app/modals/profile-media-click/profile-media-click.page.html
+++ b/src/app/modals/profile-media-click/profile-media-click.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <app-timeline [data]="timelineData"></app-timeline>
+  <!-- <app-timeline [data]="timelineData"></app-timeline> -->
 </ion-content>
