--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -21,7 +21,7 @@
         <div class="last-updated">
           <ion-chip color="warning">Sports</ion-chip>
           <ion-note class="live-updates" *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState !== 'Final'" color="medium">Last updated at {{post.sportsgame.lastUpdate | date: 'h:mma'}} ET</ion-note>
-          <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Final' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Game Over' && post.sportsgame.oriolesOutcome" color="medium" class="orioles-outcome">{{post.sportsgame.oriolesOutcome}}</ion-note>
+          <ion-note *ngIf="post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Final' || post.sportsgame.gameInfo.initialGameData.status.detailedState === 'Game Over' && post.sportsgame.gameInfo.oriolesOutcome" color="medium" class="orioles-outcome">{{post.sportsgame.gameInfo.oriolesOutcome}}</ion-note>
         </div>
         <div class="sports-banner">
           <div class="sports-teams">
